--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "0.3",
+  "version": "0.4",
   "name": "passhub.net",
   "description": "username/password and bank card data automatic form filler",
   "icons": {
@@ -26,5 +26,16 @@
     "default_popup": "popup.html"
   },
 
-  "permissions": ["activeTab", "tabs", "https://*.passhub.net/*"]
+  "options_ui": {
+    "page": "options.html"
+  },
+
+  "permissions": [
+    "activeTab",
+    "tabs",
+    "storage",
+    "webNavigation",
+    "scripting",
+    "https://*/"
+  ]
 }
