--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.2.1",
     "node-forge": "^1.3.1",
+    "webpack": "^5.75.0",
     "wwpass-frontend": "^3.2.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.0.1"
   }
 }
