--- a/.gitignore
+++ b/.gitignore
@@ -2,32 +2,7 @@
 
 # dependencies
 /node_modules
-/frontend
-/archive
-/publish
-/source
-/images/icon*
-/.pnp
-.pnp.js
-background.js
-background.js.map
-popup.js
-popup.js.map
+*.map
+/background.js
+/popup.js
 
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
