--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
-  "version": "0.6",
+  "version": "1.4",
   "name": "passhub.net",
   "description": "username/password and bank card data automatic form filler",
   "icons": {
-    "48": "images/passhub-lock.svg"
+    "48": "images/favicon_2d.svg"
   },
   "browser_specific_settings": {
     "gecko": {
@@ -12,24 +12,20 @@
     }
   },
   "background": {
-    "scripts": ["background.js"]
+    "scripts": [
+      "background.js"
+    ]
   },
-
   "browser_action": {
     "default_icon": {
-      "16": "images/passhub-lock.svg",
-      "32": "images/passhub-lock.svg",
-      "48": "images/passhub-lock.svg",
-      "64": "images/passhub-lock.svg",
-      "128": "images/passhub-lock.svg"
+      "32": "images/favicon_2d.svg",
+      "64": "images/favicon_2d.svg"
     },
     "default_popup": "popup.html"
   },
-
   "options_ui": {
     "page": "options.html"
   },
-
   "permissions": [
     "activeTab",
     "tabs",
