--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack  --mode=production",
+    "build": "webpack  --mode=production --no-devtool",
     "builddev": "webpack --mode=development"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.1",
+    "hi-base32": "^0.5.1",
     "node-forge": "^1.3.1",
     "webpack": "^5.75.0",
-    "wwpass-frontend": "^3.2.0"
+    "wwpass-frontend": "^3.6.0"
   },
   "devDependencies": {
     "webpack-cli": "^5.0.1"
